Fixed freaking issue on mobile

--- a/templates/shaper_helixultimate/css/template.css
+++ b/templates/shaper_helixultimate/css/template.css
@@ -1455,10 +1455,9 @@ opacity: 0;
   margin-top: 18px;
 }
 .price-calc-wrapper .input-group-text{
-  width:115px;
   display:block;
   text-align: center;
-  padding:9px;
+  width:100px;
 }
 .havedeviceslbl{
   padding-top:5px;
